# Lab1_CrossPlatrofrm_Web_Agent

./: .gitignore  CMakeLists.txt  HTTP_client.cpp  HTTP_client.h  README.md  consoletab.cpp  consoletable.h  json_functions.cpp  json_functions.h  keychain.json  logger.cpp  logger.h  main.cpp
.github/workflows/: ci.yml
tests/: tests.cpp
